--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,22 @@
 Package: DEWSeq
 Type: Package
 Title: eCLIP window differential expression analysis
-Version: 0.1.2
+Version: 1.0.0
 Author: Hentze lab bioinformatics team
 Maintainer: Hentze bioinformatics team <biohentze@embl.de>
 Description: Differential expression analysis of windows from eCLIP data
     Use four spaces when indenting paragraphs within the Description.
 Imports:
     DESeq2,
+    data.table,
     BiocParallel,
+    GenomeInfoDb,
     GenomicRanges
 Depends:
     DESeq2,
+    data.table,
     BiocParallel,
+    GenomeInfoDb,
     GenomicRanges
 Suggests:
    knitr
