--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,13 +11,15 @@ Imports:
     data.table,
     BiocParallel,
     GenomeInfoDb,
-    GenomicRanges
+    GenomicRanges,
+    utils
 Depends:
     DESeq2,
     data.table,
     BiocParallel,
     GenomeInfoDb,
-    GenomicRanges
+    GenomicRanges,
+    utils
 Suggests:
    knitr
 License: What license is it under?
