--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,8 @@ Type: Package
 Title: Differential Expressed Windows Based on Negative Binomial Distribution
 Version: 1.5.6
 Authors@R: c(
-    person("Sudeep", "Sahadevan", email="sahadevan@embl.de", role = c("aut","cre")),
-    person("Thomas", "Schwarzl", email="sahadevaon@embl.de", role = c("aut", "ctb"))
+    person("Sudeep", "Sahadevan", email="sahadeva@embl.de", role = c("aut","cre")),
+    person("Thomas", "Schwarzl", email="schwarzl@embl.de", role = c("aut", "ctb"))
     )
 Maintainer: Hentze bioinformatics team <biohentze@embl.de>
 Description: Differential expression analysis of windows from eCLIP data
