--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: DEWSeq
 Type: Package
 Title: Differential Expressed Windows Based on Negative Binomial Distribution
-Version: 1.5.6
+Version: 1.6.0
 Authors@R: c(
     person("Sudeep", "Sahadevan", email="sahadeva@embl.de", role = c("aut","cre")),
     person("Thomas", "Schwarzl", email="schwarzl@embl.de", role = c("aut", "ctb"))
@@ -33,6 +33,8 @@ Depends:
 Suggests:
     knitr,
     rmarkdown
+VignetteBuilder:
+    knitr
 biocViews: Sequencing,
     DifferentialExpression
 License: LGPL (>= 3)
