--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,8 @@ importFrom(S4Vectors,na.omit)
 importFrom(SummarizedExperiment,assays)
 importFrom(SummarizedExperiment,colData)
 importFrom(data.table,fread)
+importFrom(data.table,getDTthreads)
+importFrom(data.table,setDTthreads)
 importFrom(methods,is)
 importFrom(stats,p.adjust)
 importFrom(stats,pnorm)
