fig size 200px to 2 inches in vignette

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,9 +17,11 @@ importFrom(S4Vectors,na.omit)
 importFrom(SummarizedExperiment,SummarizedExperiment)
 importFrom(SummarizedExperiment,assays)
 importFrom(SummarizedExperiment,colData)
+importFrom(SummarizedExperiment,rowRanges)
 importFrom(data.table,fread)
 importFrom(data.table,getDTthreads)
 importFrom(data.table,setDTthreads)
+importFrom(methods,as)
 importFrom(methods,is)
 importFrom(stats,p.adjust)
 importFrom(stats,pnorm)
