--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,41 @@
-.Rproj.user
+# History files
 .Rhistory
+.Rapp.history
+
+# Session Data files
 .RData
+
+# User-specific files
 .Ruserdata
-.renviron
-.rprofile
+
+# Example code in package build process
+*-Ex.R
+
+# Output files from R CMD build
+/*.tar.gz
+
+# Output files from R CMD check
+/*.Rcheck/
+
+# RStudio files
 .Rproj
-.Rproj.user
-.Rhistory
+.Rproj.user/
+
+# produced vignettes
 vignettes/*.html
 vignettes/*.pdf
-.rapp.history
-.o
-.sl
-.so
-.dylib
-.a
-.dll
-.def
-.DS_Store
-unsrturl.bst
-.log
-.aux
-.backups
-.cproject
-.directory
-.dropbox
-.exrc
-.gdb.history
-.gitattributes
-.gitmodules
-.hgtags
-.project
-.seed
-.settings
-.tm_properties
+
+# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
+.httr-oauth
+
+# knitr and R markdown default cache directories
+*_cache/
+/cache/
+
+# Temporary files created by R markdown
+*.utf8.md
+*.knit.md
+
+.renviron
+.rprofile
+
