--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,4 +33,6 @@ biocViews: Sequencing,
 License: LGPL (>= 3)
 URL: https://git.embl.de/biohentze/DEWSeq
 Encoding: UTF-8
+LazyData: false
 RoxygenNote: 6.1.1
+BugReports: https://github.com/EMBL-Hentze-group/DEWSeq/issues
