--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: DEWSeq
 Type: Package
 Title: Differential Expressed Windows Based on Negative Binomial Distribution
-Version: 0.99.4
+Version: 0.99.6
 Author: Sudeep Sahadevan <sahadeva@embl.de>, Thomas Schwarzl <schwarzl@embl.de>
 Maintainer: Hentze bioinformatics team <biohentze@embl.de>
 Description: Differential expression analysis of windows for next-generation sequencing data like eCLIP or iCLIP data.
@@ -23,7 +23,8 @@ Suggests:
     knitr,  
     rmarkdown,
     testthat,
-    BiocStyle
+    BiocStyle,
+    IHW
 VignetteBuilder:
     knitr
 biocViews: Sequencing,
