remove duplicated chromosomal positions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ import(BiocParallel)
 import(DESeq2)
 import(S4Vectors)
 importFrom(BiocGenerics,sort)
+importFrom(BiocGenerics,strand)
+importFrom(GenomeInfoDb,seqnames)
 importFrom(GenomeInfoDb,sortSeqlevels)
 importFrom(GenomicRanges,findOverlaps)
 importFrom(GenomicRanges,makeGRangesFromDataFrame)
