--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: DEWSeq
+Package: DEWSeqD
 Type: Package
 Title: Differential Expressed Windows Based on Negative Binomial Distribution
 Version: 1.1.0
@@ -16,7 +16,6 @@ Imports:
     stats,
     utils
 Depends:
-    R(>= 3.6.0),
     DESeq2,
     BiocParallel
 Suggests:
