--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
-Package: DEWSeqD
+Package: DEWSeq
 Type: Package
 Title: Differential Expressed Windows Based on Negative Binomial Distribution
-Version: 1.1.0
+Version: 1.2.0
 Author: Sudeep Sahadevan <sahadeva@embl.de>, Thomas Schwarzl <schwarzl@embl.de>
 Maintainer: Hentze bioinformatics team <biohentze@embl.de>
 Description: Differential expression analysis of windows for next-generation sequencing data like eCLIP or iCLIP data.
@@ -16,6 +16,7 @@ Imports:
     stats,
     utils
 Depends:
+    R(>= 3.6.0),
     DESeq2,
     BiocParallel
 Suggests:
