--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,13 +2,13 @@ Package: DEWSeq
 Type: Package
 Title: Differential Expressed Windows Based on Negative Binomial Distribution
 Version: 1.1.4
-Author@R: 
+Authors@R: 
     c(person("Sudeep","Sahadevan",email= "sahadeva@embl.de",role="aut"), 
     person("Thomas","Schwarzl",email="schwarzl@embl.de",role="aut"),
-    person("bioinformatics team","Hentze",email="biohentze@embl.de",role=c("aut","cre"))
-Description: e/iCLIP next-generation sequencing data: 
-    analysis of differentially expressed windows based on
-    negative binomial distribution
+    person("bioinformatics team","Hentze",email="biohentze@embl.de",role=c("aut","cre")))
+Description: DEWSeq is a sliding window approach for the analysis of
+    differentially enriched binding regions eCLIP or iCLIP next generation
+    sequencing data. 
 Imports:
     BiocGenerics,
     data.table(>= 1.11.8),
