--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,5 +3,4 @@ image: hentzegroup/dewseq_test:devel
 test:
     script:
         - R CMD build .
-        - R CMD check DEWSeq*.tar.gz
-        - R -e 'library(BiocCheck);setwd('../');BiocCheck("DEWSeq")'
+        - R -e 'library(BiocCheck);setwd("../");BiocCheck("DEWSeq")'
