--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,4 +3,4 @@ image: hentzegroup/dewseq_test:devel
 test:
     script:
         - R CMD build .
-        - R -e 'library(BiocCheck);BiocCheck(".")'
+        - R -e 'library(BiocCheck);BiocCheck("../DEWSeq")'
