--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,10 +5,8 @@ Version: 1.3.2
 Authors@R: 
     c(person("Sudeep","Sahadevan",email= "sahadeva@embl.de",role="aut"), 
     person("Thomas","Schwarzl",email="schwarzl@embl.de",role="aut"),
-    person("bioinformatics team","Hentze",email="biohentze@embl.de",role=c("aut")))
-Description: DEWSeq is a sliding window approach for the analysis of
-    differentially enriched binding regions eCLIP or iCLIP next generation
-    sequencing data. 
+    person("bioinformatics team","Hentze",email="biohentze@embl.de",role=c("aut","cre")))
+Description: DEWSeq
 Imports:
     BiocGenerics,
     data.table(>= 1.11.8),
