--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,17 +6,19 @@ test:
         - R -e  "library(BiocCheck);
             checkRes <- BiocCheck(Sys.glob('DEWSeq*.tar.gz')[1]);
             error<-FALSE;
-            if(length(checkRes$$error)>0){
-            error<-TRUE;
-            for(i in seq_along(checkRes$$error)){message(checkRes$$error[i],'\n');}
+            if(length(checkRes[['error']])>0){
+                error<-TRUE;
+                message(paste(checkRes[['error']],collapse='\n\n'));
             }
-            if(length(checkRes$$warning)>0){
-            error<-TRUE;
-            for(i in seq_along(checkRes$$warning)){message(checkRes$$warning[i],'\n');}
+            if(length(checkRes[['warning']])>0){
+                error<-TRUE;
+                message(paste(checkRes[['warning']],collapse='\n\n'));
             }
-            for(i in seq_along(checkRes$$note)){message(checkRes$$note[i],'\n');}
+            if(length(checkRes[['note']])>0){
+                message(paste(checkRes[['note']],collapse='\n\n'));
+            }
             if(error){
-            stop('Fix the warnings/errors above!');
+                stop('Fix the warnings/errors above!');
             }else{
-            message('No errors found\n');}"
+                message('No errors found\n');}"
 
