--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,16 +8,16 @@ test:
             error<-FALSE;
             if(length(checkRes[['error']])>0){
                 error<-TRUE;
-                message('____ ERORRS ____\n\n')
+                message('____ ERORRS ____\n\n');
                 message(paste(checkRes[['error']],collapse='\n\n'));
             };
             if(length(checkRes[['warning']])>0){
                 error<-TRUE;
-                message('____ WARNINGS ____\n\n')
+                message('____ WARNINGS ____\n\n');
                 message(paste(checkRes[['warning']],collapse='\n\n'));
             };
             if(length(checkRes[['note']])>0){
-                message('____ NOTES ____\n\n')
+                message('____ NOTES ____\n\n');
                 message(paste(checkRes[['note']],collapse='\n\n'));
             };
             if(error){
