add missing description

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,15 +10,18 @@ test:
                 error<-TRUE;
                 message('____ ERORRS ____\n\n');
                 message(paste(checkRes[['error']],collapse='\n\n'));
+                message('\n\n');
             };
             if(length(checkRes[['warning']])>0){
                 error<-TRUE;
                 message('____ WARNINGS ____\n\n');
                 message(paste(checkRes[['warning']],collapse='\n\n'));
+                message('\n\n');
             };
             if(length(checkRes[['note']])>0){
                 message('____ NOTES ____\n\n');
                 message(paste(checkRes[['note']],collapse='\n\n'));
+                message('\n\n');
             };
             if(error){
                 stop('Fix the warnings/errors above!');
