--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(extractRegions)
 export(resultsDEWSeq)
 export(toBED)
 export(topWindowStats)
+export(filterCounts)
 import(BiocParallel)
 import(DESeq2)
 import(S4Vectors)
